--- a/index.html
+++ b/index.html
@@ -21,31 +21,32 @@
             <div id="wrap">
                <div id="text">
                     <div id="code">                 
-                    <span class="say">我的爱人，我会牵着你的手，走到满头白发的那一天，</span><br>
-                    <span class="say">我会守护你生命里的精彩，并陪伴你一路精彩下去。</span><br>
-                    <span class="say">你的幸福快乐，是我一生的追求。</span><br>
-                    <span class="say">我会每一天带着笑脸，和你说早安，</span><br>
-                     <span class="say">我会每一晚与你道声晚安再入梦乡，</span><br>
-                    <span class="say">我会带你去所有你想去的地方，</span><br>
-                    <span class="say">陪你闹看你笑</span><br>
-                    <span class="say">历经你生命中所有的点点滴滴。</span><br>
-                    <span class="say">我期待这一生与你一起走过，</span><br>
-                    <span class="say">我期待与你慢慢变老</span><br>
-                    <span class="say">等我们老到哪儿也去不了，</span><br>
-                    <span class="say">还能满载着一生的幸福快乐 ！</span><br>
+                    <span class="say">Dear 邱邱：</span><br>
+                    <span class="say">你生是我的小猪佩奇，死是我的烤五花肉 >o<</span><br>
+                    <span class="say">跟着大哥混，三天饿九顿 >o</span><br>
+                    <span class="say">今天又是想你和玩耍的一天~</span><br>
+                    <span class="say">虽然不能时时刻刻见面，</span><br>
+                    <span class="say">虽然不能及时分享彼此的开心与悲伤，</span><br>
+                    <span class="say">可是我们相遇的那一天，一切都不会变嗷呜~</span><br>
+                    <span class="say">很多时候想抱一抱你，想告诉你，</span><br>
+                    <span class="say">我理解你的敏感和小心翼翼，也知道你真的很努力，</span><br>
+                    <span class="say">你要多关照自己的情绪，</span><br>
+                    <span class="say">剩下的就随风吧，</span><br>
+                    <span class="say">我们慢慢努力，慢慢来，就很快了呀~</span><br>
+                    <!-- <span class="say"> Yours Lanjiawen2020</span><br>
                     <br>
                     <span class="say">我会为我们的未来撑起一片天空，</span><br>
                      <span class="say">为我们的将来担负起一生的责任，</span><br>
                       <span class="say">愿意为你去做每一件能让你开心快乐的事。</span><br>
                        <span class="say">所有我们经历的点点滴滴，</span><br>
                         <span class="say">都是我们一辈子最美的回忆。</span><br>
-                         <span class="say">我愿意爱你直到老去！</span><br>
-                   <br>
-                    <span class="say"><span class="space"></span> -- Yours, wuxia2001.</span>
+                         <span class="say">我愿意爱你直到老去！</span><br> -->
+                   <!-- <br> -->
+                    <span class="say"><span class="space"></span> -- Yours Lanjiawen2020</span>
                     </div>
                 </div>
                 <div id="clock-box">
-                    <a href="http://xixing.tech" target="_blank">@蓝慢慢</a> 与 <a href="http://xixing.tech" target="_blank">@我</a> 在一起的
+                    <a href="http://xixing.tech" target="_blank">@蓝佳文</a> 与 <a href="http://xixing.tech" target="_blank">@邱晓雪</a> 认识的
                         <div id="clock"></div>
                 </div>
                 <canvas id="canvas" width="1100" height="680"></canvas>
@@ -187,7 +188,7 @@
 
         var textAnimate = eval(Jscex.compile("async", function () {
             var together = new Date();
-            together.setFullYear(2010, 5, 8);
+            together.setFullYear(2011, 9, 1);
             together.setHours(20);
             together.setMinutes(20);
             together.setSeconds(0);
