--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <div id="code">                 
                     <span class="say">Dear 邱邱：</span><br>
                     <span class="say">你生是我的小猪佩奇，死是我的烤五花肉 >o<</span><br>
-                    <span class="say">跟着大哥混，三天饿九顿 >o</span><br>
+                    <span class="say">跟着大哥混，三天饿九顿 >o<</span><br>
                     <span class="say">今天又是想你和玩耍的一天~</span><br>
                     <span class="say">虽然不能时时刻刻见面，</span><br>
                     <span class="say">虽然不能及时分享彼此的开心与悲伤，</span><br>
